# rocket-postgres-prototype

./: Cargo.toml  README.md
sql/: V1__create_stuff_table.sql  create_stuff_table.sql
src/: main.rs
